# ml-project-spring2026

./: PushT_DAgger_ACT_Workflow.md  README.md  pyproject.toml  requirements.txt
data/: build_chunk.py  episode_saver.py  npz_builder.py  trajectory_recorder.py
data/act_dagger/failed_autonomous/: env_seed_2129293223_trial_0_20260408_024857_684750.npz  env_seed_2129293223_trial_0_20260408_024857_684750_images.npz
data/act_dagger/human_intervention/: env_seed_1001975558_trial_0_20260408_025242_634045.npz  env_seed_1001975558_trial_0_20260408_025242_634045_images.npz  env_seed_1078278455_trial_0_20260408_025306_070279.npz  env_seed_1078278455_trial_0_20260408_025306_070279_images.npz  (+42 more)
envs/: frame_stack_wrapper.py  interactive_utils.py
models/: act.py  bc_mlp.py  chunk_mlp.py
models/bc_mlp/: config.json
models/dagger1/: config.json
models/dagger2/: config.json  normalization_stats.npz
models/pretrain/: config.json
models/pretrain_smoothl1/: config.json
scripts/: act_dagger_collect.py  act_dagger_finetune.py  act_eval.py  act_train.py  bc_mlp_dagger.py  bc_mlp_dagger_finetune.py  bc_mlp_eval.py  bc_mlp_train.py  bc_transformer.py  chunk_mlp_eval.py  chunk_mlp_train.py  collect_dagger_intervention.py  collect_human_intervention_data.py  collect_teleop_data.py  dagger_finetune_training.py  data_collection.py  eval_model.py  eval_transformer.py  lerobot_act_eval.py  lerobot_act_train.py  standard_bc_inference.py  standard_bc_training.py  standard_bc_training_new.py  target_data_collection.py  validate_episode_schema.py
(+226 files in other folders)
