[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bc-flowmatch"
version = "0.1.0"
description = "Flow Matching Imitation Learning with Multi-Modal DiT in JAX/Equinox"
authors = [
    {name = "Zheyuan Hu", email = "zheyuanh@cmu.edu"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.7.0",
    "equinox>=0.13.0",
    "optax>=0.2.6",
    "einops>=0.8.0",
    "datasets>=4.1.1",
    "gym-pusht",
    "tqdm",
    "opencv-python>=4.12.0.88",
    # "numpy>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ipdb",
]

[tool.hatch.build.targets.wheel]
packages = ["bc_flowmatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

